--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DisplayInfo"
+            android:label="Daily Yoga" >
+        </activity>
         <receiver android:name=".AlarmReceiver" android:process=":remote" />
 
     </application>
