--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:icon="@drawable/yoga"
+        android:icon="@drawable/yog"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
